# IpMU

./: .gitignore  CMakeLists.txt  README.md  build.ps1  construcao.py  exemplo.py  run_all_seeds.ps1
instances/: exemplo1.txt  fig1_salazar.txt
python/: aggregate_seeds.py  figura_desvio_vs_n.py  figura_escalabilidade.py  plot_solution.py  run_benchmark.py  run_full_benchmark.py  visualizacao.py
results/: ResultsInstanceByInstance.xlsx
results/raw/: bvns_greedy_seed42.csv  bvns_random_seed42.csv  rvns_greedy_seed42.csv  rvns_random_seed42.csv  salazar_seed42.csv
results/report/: bvns_greedy_seed42_n100.csv  bvns_greedy_seed42_n20.csv  bvns_greedy_seed42_n200.csv  bvns_greedy_seed42_n40.csv  bvns_greedy_seed42_n500.csv  bvns_greedy_seed42_n60.csv  bvns_greedy_seed42_n80.csv  bvns_random_seed42_n100.csv  bvns_random_seed42_n20.csv  bvns_random_seed42_n200.csv  bvns_random_seed42_n40.csv  bvns_random_seed42_n500.csv  bvns_random_seed42_n60.csv  bvns_random_seed42_n80.csv  combined_n100.csv  combined_n20.csv  combined_n200.csv  combined_n40.csv  combined_n500.csv  combined_n60.csv  combined_n80.csv  rvns_greedy_seed42_n100.csv  rvns_greedy_seed42_n20.csv  rvns_greedy_seed42_n200.csv  rvns_greedy_seed42_n40.csv  rvns_greedy_seed42_n500.csv  rvns_greedy_seed42_n60.csv  rvns_greedy_seed42_n80.csv  rvns_random_seed42_n100.csv  rvns_random_seed42_n20.csv  rvns_random_seed42_n200.csv  rvns_random_seed42_n40.csv  rvns_random_seed42_n500.csv  rvns_random_seed42_n60.csv  rvns_random_seed42_n80.csv  salazar_seed42_n100.csv  salazar_seed42_n20.csv  (+13 more)
src/: main.cpp
(+983 files in other folders)
